--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "easyxml-ts",
     "preferGlobal": false,
-    "version": "0.0.5",
-    "main": "easyxml.js",
+    "version": "0.0.6",
+    "main": "easyxml-ts.js",
     "author": "Thomas Hunter <tlhunter@gmail.com>",
     "description": "A configurable object to XML converter",
     "repository": {
